Revision history for Perl extension Moose::Autobox

0.04 <release date>
    * Moose::Autobox::Hash
      - added method for shallow hash merging

    * Moose::Autobox::String
      - fixed rindex method

    * Moose::Autobox::Ref
      - added &perl method which is an alias for &dump for symmetry
        with Perl6's .perl
      
0.03 Thurs. Aug 17, 2006

    * Moose::Autobox 
      - we now inherit from autobox, now we don't have to 
        do that ugly eval thing or manually load autobox  
        when we want to use this module.
      - added &mixin_additional_role to allow mixing in of 
        additional functionality (see examples/unit/*)

    * Moose::Autobox::Code
      - added the Y and U combinators

    + added new examples for units
      - ported from the Pugs examples/units directory

0.02 Sat. June 24, 2006
    - fixed Moose::Autobox so that PAUSE won't try to 
      index SCALAR, ARRAY, HASH and CODE.
      
    - added examples/ directory 
      - ported tic-tac-toe from the Pugs examples
    
    * Moose::Autobox::Ref
      - added &dump method which will use Data::Dumper
        to return a dumped representation of the ref
      
    * Moose::Autobox::Array
      - added Junctions support with Perl6::Junction

0.01 Fri. June 9, 2006
    - Autoboxing, all the cool kids are doing it ;)
    